spacing is no longer dependent on resolution.

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ section {
   height: 100%;
 }
 
+#main_container {
+  width: 800px;
+}
+
 #download_container {
   display: block;
   margin-top: 100px;
